--- a/JSApplications/week4.4 - Exercise/01.Team-Manager/src/views/TODO.txt
+++ b/JSApplications/week4.4 - Exercise/01.Team-Manager/src/views/TODO.txt
@@ -1,6 +1,7 @@
 MENU - done
 Register - done
-Team details
-Create a team
+Leave Team - CONTINUE FROM HERE
+Team details - 
+Create a team - 
 
 Set modal where it is needed
